PoC with Arduino Wire library

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ src_dir = src
 [env:TCN75DriverDemo]
 platform = atmelavr
 board = pro16MHzatmega328
-; framework = arduino
+framework = arduino
 
 upload_port = COM3
 
