using I2C to read TCN75 temperature on ATmega328p

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,9 @@ platform = atmelavr
 board = pro16MHzatmega328
 ; framework = arduino
 
+build_flags= 
+    -Wl,-u,vfprintf,-lprintf_flt  ; enable floating point printf library
+
 upload_port = COM3
 
 monitor_port = COM3
